--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MiPaginaWeb",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://carlesmatoses.github.io",
   "description": "",
   "license": "MIT",
   "scripts": {
