--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "start": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "preview": "vite preview",
-    "build": "vite build"
+    "build": "vite build",
+    "homepage": "https://carlesmatoses.github.io"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -29,7 +30,7 @@
   },
   "devDependencies": {
     "babel-preset-nano-react-app": "^0.1.0",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.1.1",
     "vite": "^4.4.11"
   },
   "babel": {
