--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "cheerio": "^1.0.0-rc.12",
     "jquery": "^3.7.1",
+    "npm": "^10.5.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
