--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Carles Matoses Gimenez
+name: Carles Matoses Gimenez
+email: carlesmatosesg@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Carles Matoses Gimenez works as my portfolio where I upload relevant and recent works. 
+  I'm a computer graphics student with a degree in multimedia technologies. I'm interested in open source softwares, photography and visual effects. 
+  I spend some of my time studiying blender as well as game engines!!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+keywords: Computer Graphics, Programming, Python, Blender, Render, Rendering, Game Engines, Real Time Rendering, Fast Realistic Rendering
 
 # Build settings
 theme: minima
