--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,5 @@ services:
     environment:
       - BUNDLE_PATH=/site/vendor/bundle
       - JEKYLL_ENV=development
-    command: bash -c "bundle install && bundle exec jekyll serve --host 0.0.0.0 --port 4000 --livereload --force_polling"
+    command: bash -c "bundle install && bundle exec jekyll serve --drafts --host 0.0.0.0 --port 4000 --livereload --force_polling"
     restart: unless-stopped
